name:                ekg-push
version:             0.0.1
synopsis:            Flush metric deltas to a callback.
description:
  This library lets you supply metric deltas to an IO action callback.
homepage:            https://github.com/adarqui/ekg-push
bug-reports:         https://github.com/adarqui/ekg-push/issues
license:             BSD3
license-file:        LICENSE
author:              Andrew Darqui
maintainer:          andrew.darqui@gmail.com
category:            System
build-type:          Simple
extra-source-files:  CHANGES.md
cabal-version:       >=1.10

library
  exposed-modules:     
    System.Remote.Monitoring.Push
  build-depends:
    base >= 4.5 && < 4.8,
    bytestring < 1.0,
    ekg-core >= 0.1 && < 1.0,
    text < 1.3,
    time < 1.5,
    unordered-containers < 0.3
  default-language:    Haskell2010
  ghc-options: -Wall


executable "basic"
    main-is: "basic.hs"
    hs-source-dirs: examples
    build-depends: base >= 4, ekg-core, ekg-push

source-repository head
  type:     git
  location: https://github.com/adarqui/ekg-push.git
